# rcli

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  env_backup.md  note.md
fixtures/: black3.txt  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs  text.rs
