[package]
name = "rcli"
version = "0.1.0"
authors = ["yxnne"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
