[package]
name = "rcli"
version = "0.1.0"
authors = ["yxnne"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.9.2"
rand_core = { version = "0.9.2", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
yaml = "0.3.0"
zxcvbn = "3.1.0"
